--- a/ERP/Inventory/templates/Inventory/product_form.html
+++ b/ERP/Inventory/templates/Inventory/product_form.html
@@ -1,91 +1,16 @@
-{% extends "Inventory/_form_base.html" %}
+{% extends "components/base/form_base.html" %}
 {% load static %}
 
 {% block title %}{% if form.instance.pk %}Edit Product{% else %}Create Product{% endif %}{% endblock %}
+{% block form_title_text %}{% if form.instance.pk %}Edit Product{% else %}Create Product{% endif %}{% endblock %}
 
-{% block form_content %}
-<div class="card">
-  <div class="card-body">
-    <form method="post" novalidate>
-      {% csrf_token %}
-      {{ form.non_field_errors }}
-      <div class="row g-3">
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Category</label>
-          {{ form.category }} {{ form.category.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Code</label>
-          {{ form.code }} {{ form.code.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Name</label>
-          {{ form.name }} {{ form.name.errors }}
-        </div>
-        <div class="col-md-12">
-          <label class="form-label">Description</label>
-          {{ form.description }} {{ form.description.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">UOM</label>
-          {{ form.uom }} {{ form.uom.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Currency</label>
-          {{ form.currency_code }} {{ form.currency_code.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Sale Price</label>
-          {{ form.sale_price }} {{ form.sale_price.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Cost Price</label>
-          {{ form.cost_price }} {{ form.cost_price.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Min Order Qty</label>
-          {{ form.min_order_quantity }} {{ form.min_order_quantity.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Reorder Level</label>
-          {{ form.reorder_level }} {{ form.reorder_level.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Preferred Vendor ID</label>
-          {{ form.preferred_vendor_id }} {{ form.preferred_vendor_id.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Barcode</label>
-          {{ form.barcode }} {{ form.barcode.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">SKU</label>
-          {{ form.sku }} {{ form.sku.errors }}
-        </div>
-        <div class="col-md-4">
-          <div class="form-check mt-4">
-            {{ form.is_inventory_item }} {{ form.is_inventory_item.errors }}
-            <label class="form-check-label ms-1">Is Inventory Item?</label>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Income Account</label>
-          {{ form.income_account }} {{ form.income_account.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Expense Account</label>
-          {{ form.expense_account }} {{ form.expense_account.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Inventory Account</label>
-          {{ form.inventory_account }} {{ form.inventory_account.errors }}
-        </div>
-      </div>
-      <div class="d-flex justify-content-end gap-2 mt-3">
-        <a href="{% url 'inventory:product_list' %}" class="btn btn-outline-secondary">Cancel</a>
-        <button type="submit" class="btn btn-primary">Save</button>
-      </div>
-    </form>
+{% block form_fields %}
+  {% include 'components/inventory/forms/product_form_fields.html' %}
+{% endblock %}
+
+{% block form_actions %}
+  <div class="d-flex gap-2 ms-auto">
+    <a href="{% url 'inventory:product_list' %}" class="btn btn-outline-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary" data-form-submit>Save</button>
   </div>
-</div>
 {% endblock %}
