--- a/ERP/accounting/templates/accounting/vouchers/defaultjournal.html
+++ b/ERP/accounting/templates/accounting/vouchers/defaultjournal.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Journal</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+    <script src="{% static 'libs/htmx.org/dist/htmx.min.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Custom styles for elements that can't be easily done with Tailwind */
