--- a/ERP/templates/components/base/layout.html
+++ b/ERP/templates/components/base/layout.html
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     
     <!-- HTMX -->
-    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script src="{% static 'libs/htmx.org/dist/htmx.min.js' %}"></script>
     
     <!-- Optional: Hyperscript for more complex interactions -->
     <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
