--- a/ERP/templates/partials/content.html
+++ b/ERP/templates/partials/content.html
@@ -360,7 +360,7 @@
 
                                         <div class="d-flex align-items-center pb-4">
                                             <div class="avatar-md me-4">
-                                                <img src="{% static 'images/users/avatar-4'%}.jpg" class="img-fluid rounded-circle" alt="">
+                                                <img src="{% static 'images/users/avatar-4.jpg' %}" class="img-fluid rounded-circle" alt="">
                                             </div>
                                             <div class="flex-grow-1">
                                                 <h5 class="font-size-15 mb-1"><a href="" class="text-dark">Vernon Wood</a></h5>
@@ -383,7 +383,7 @@
 
                                         <div class="d-flex align-items-center pb-4">
                                             <div class="avatar-md me-4">
-                                                <img src="{% static 'images/users/avatar-5'%}.jpg" class="img-fluid rounded-circle" alt="">
+                                                <img src="{% static 'images/users/avatar-5.jpg' %}" class="img-fluid rounded-circle" alt="">
                                             </div>
                                             <div class="flex-grow-1">
                                                 <h5 class="font-size-15 mb-1"><a href="" class="text-dark">Howard Rhoades</a></h5>
@@ -406,7 +406,7 @@
 
                                         <div class="d-flex align-items-center pb-4">
                                             <div class="avatar-md me-4">
-                                                <img src="{% static 'images/users/avatar-6'%}.jpg" class="img-fluid rounded-circle" alt="">
+                                                <img src="{% static 'images/users/avatar-6.jpg' %}" class="img-fluid rounded-circle" alt="">
                                             </div>
                                             <div class="flex-grow-1">
                                                 <h5 class="font-size-15 mb-1"><a href="" class="text-dark">Arthur Zurcher</a></h5>
@@ -429,7 +429,7 @@
 
                                         <div class="d-flex align-items-center pb-4">
                                             <div class="avatar-md me-4">
-                                                <img src="{% static 'images/users/avatar-8'%}.jpg" class="img-fluid rounded-circle" alt="">
+                                                <img src="{% static 'images/users/avatar-8.jpg' %}" class="img-fluid rounded-circle" alt="">
                                             </div>
                                             <div class="flex-grow-1">
                                                 <h5 class="font-size-15 mb-1"><a href="" class="text-dark">Angela Palmer</a></h5>
@@ -452,7 +452,7 @@
 
                                         <div class="d-flex align-items-center pb-3">
                                             <div class="avatar-md me-4">
-                                                <img src="{% static 'images/users/avatar-9'%}.jpg" class="img-fluid rounded-circle" alt="">
+                                                <img src="{% static 'images/users/avatar-9.jpg' %}" class="img-fluid rounded-circle" alt="">
                                             </div>
                                             <div class="flex-grow-1">
                                                 <h5 class="font-size-15 mb-1"><a href="" class="text-dark">Dorothy Wimson</a></h5>
@@ -735,7 +735,7 @@
                                             <li>
                                                 <div class="conversation-list">
                                                     <div class="d-flex">
-                                                        <img src="{% static 'images/users/avatar-3'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-3.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                         <div class="flex-1">
                                                             <div class="ctext-wrap">
                                                                 <div class="ctext-wrap-content">
@@ -782,7 +782,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <img src="{% static 'images/users/avatar-6'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-6.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                     </div>
                                                     
                                                 </div>
@@ -792,7 +792,7 @@
                                             <li>
                                                 <div class="conversation-list">
                                                     <div class="d-flex">
-                                                        <img src="{% static 'images/users/avatar-3'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-3.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                         <div class="flex-1">
                                                             <div class="ctext-wrap">
                                                                 <div class="ctext-wrap-content">
@@ -817,7 +817,7 @@
                                                     </div>
 
                                                     <div class="d-flex">
-                                                        <img src="{% static 'images/users/avatar-3'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-3.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                         <div class="flex-1">
                                                             <div class="ctext-wrap">
                                                                 <div class="ctext-wrap-content">
@@ -868,7 +868,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <img src="{% static 'images/users/avatar-6'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-6.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                     </div>
                                                 </div>
                                                 
@@ -877,7 +877,7 @@
                                             <li>
                                                 <div class="conversation-list">
                                                     <div class="d-flex">
-                                                        <img src="{% static 'images/users/avatar-3'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-3.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                         <div class="flex-1">
                                                             <div class="ctext-wrap">
                                                                 <div class="ctext-wrap-content">
@@ -908,7 +908,7 @@
                                             <li>
                                                 <div class="conversation-list">
                                                     <div class="d-flex">
-                                                        <img src="{% static 'images/users/avatar-3'%}.jpg" class="rounded-circle avatar-sm" alt="">
+                                                        <img src="{% static 'images/users/avatar-3.jpg' %}" class="rounded-circle avatar-sm" alt="">
                                                         <div class="flex-1">
                                                             <div class="ctext-wrap">
                                                                 <div class="ctext-wrap-content">
@@ -920,13 +920,13 @@
                                                                     <ul class="list-inline message-img mt-3  mb-0">
                                                                         <li class="list-inline-item message-img-list">
                                                                             <a class="d-inline-block m-1" href="">
-                                                                                <img src="{% static 'images/small/img-1'%}.jpg" alt="" class="rounded img-thumbnail">
+                                                                                <img src="{% static 'images/small/img-1.jpg' %}" alt="" class="rounded img-thumbnail">
                                                                             </a>                                                                  
                                                                         </li>
                 
                                                                         <li class="list-inline-item message-img-list">
                                                                             <a class="d-inline-block m-1" href="">
-                                                                                <img src="{% static 'images/small/img-2'%}.jpg" alt="" class="rounded img-thumbnail">
+                                                                                <img src="{% static 'images/small/img-2.jpg' %}" alt="" class="rounded img-thumbnail">
                                                                             </a>                                                                 
                                                                         </li>
                                                                     </ul>
