--- a/ERP/Inventory/templates/Inventory/rma_form.html
+++ b/ERP/Inventory/templates/Inventory/rma_form.html
@@ -1,76 +1,16 @@
-{% extends "Inventory/_form_base.html" %}
+{% extends "components/base/form_base.html" %}
 {% load static %}
 
-{% block title %}Create RMA{% endblock %}
+{% block title %}{% if form.instance.pk %}Edit RMA{% else %}Create RMA{% endif %}{% endblock %}
+{% block form_title_text %}{% if form.instance.pk %}Edit RMA{% else %}Create RMA{% endif %}{% endblock %}
 
-{% block form_content %}
-<div class="card">
-  <div class="card-body">
-    <form method="post" novalidate>
-      {% csrf_token %}
-      {{ form.non_field_errors }}
-      <div class="row g-3">
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">RMA Number</label>
-          {{ form.rma_number }}
-          {{ form.rma_number.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Customer ID</label>
-          {{ form.customer_id }}
-          {{ form.customer_id.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Product</label>
-          {{ form.product }}
-          {{ form.product.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Warehouse</label>
-          {{ form.warehouse }}
-          {{ form.warehouse.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Quantity</label>
-          {{ form.quantity }}
-          {{ form.quantity.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Order Reference</label>
-          {{ form.order_reference }}
-          {{ form.order_reference.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Invoice</label>
-          {{ form.original_invoice }}
-          {{ form.original_invoice.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Status</label>
-          {{ form.status }}
-          {{ form.status.errors }}
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <label class="form-label">Reason</label>
-          {{ form.reason }}
-          {{ form.reason.errors }}
-        </div>
-        <div class="col-12">
-          <label class="form-label">Description</label>
-          {{ form.description }}
-          {{ form.description.errors }}
-        </div>
-        <div class="col-12">
-          <label class="form-label">Notes</label>
-          {{ form.notes }}
-          {{ form.notes.errors }}
-        </div>
-      </div>
-      <div class="d-flex justify-content-end gap-2 mt-3">
-        <a href="{% url 'inventory:rma_list' %}" class="btn btn-outline-secondary">Cancel</a>
-        <button type="submit" class="btn btn-primary">Save</button>
-      </div>
-    </form>
+{% block form_fields %}
+  {% include 'components/inventory/forms/rma_form_fields.html' %}
+{% endblock %}
+
+{% block form_actions %}
+  <div class="d-flex gap-2 ms-auto">
+    <a href="{% url 'inventory:rma_list' %}" class="btn btn-outline-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary" data-form-submit>Save</button>
   </div>
-</div>
 {% endblock %}
