--- a/ERP/Inventory/templates/Inventory/warehouse_form.html
+++ b/ERP/Inventory/templates/Inventory/warehouse_form.html
@@ -1,51 +1,16 @@
-{% extends "Inventory/_form_base.html" %}
+{% extends "components/base/form_base.html" %}
 {% load static %}
 
 {% block title %}{% if form.instance.pk %}Edit Warehouse{% else %}Create Warehouse{% endif %}{% endblock %}
+{% block form_title_text %}{% if form.instance.pk %}Edit Warehouse{% else %}Create Warehouse{% endif %}{% endblock %}
 
-{% block form_content %}
-<div class="card">
-  <div class="card-body">
-    <form method="post" novalidate>
-      {% csrf_token %}
-      {{ form.non_field_errors }}
-      <div class="row g-3">
-        <div class="col-md-4">
-          <label class="form-label">Code</label>
-          {{ form.code }} {{ form.code.errors }}
-        </div>
-        <div class="col-md-8">
-          <label class="form-label">Name</label>
-          {{ form.name }} {{ form.name.errors }}
-        </div>
-        <div class="col-md-12">
-          <label class="form-label">Address</label>
-          {{ form.address_line1 }} {{ form.address_line1.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">City</label>
-          {{ form.city }} {{ form.city.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Country Code</label>
-          {{ form.country_code }} {{ form.country_code.errors }}
-        </div>
-        <div class="col-md-4">
-          <label class="form-label">Inventory Account</label>
-          {{ form.inventory_account }} {{ form.inventory_account.errors }}
-        </div>
-        <div class="col-md-4">
-          <div class="form-check mt-4">
-            {{ form.is_active }} {{ form.is_active.errors }}
-            <label class="form-check-label ms-1">Active?</label>
-          </div>
-        </div>
-      </div>
-      <div class="d-flex justify-content-end gap-2 mt-3">
-        <a href="{% url 'inventory:warehouse_list' %}" class="btn btn-outline-secondary">Cancel</a>
-        <button type="submit" class="btn btn-primary">Save</button>
-      </div>
-    </form>
+{% block form_fields %}
+  {% include 'components/inventory/forms/warehouse_form_fields.html' %}
+{% endblock %}
+
+{% block form_actions %}
+  <div class="d-flex gap-2 ms-auto">
+    <a href="{% url 'inventory:warehouse_list' %}" class="btn btn-outline-secondary">Cancel</a>
+    <button type="submit" class="btn btn-primary" data-form-submit>Save</button>
   </div>
-</div>
 {% endblock %}
