--- a/ERP/accounting/templates/accounting/_form_base.html
+++ b/ERP/accounting/templates/accounting/_form_base.html
@@ -6,7 +6,7 @@
 {% block extra_css %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'libs/flatpickr/dist/flatpickr.min.css' %}">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <link href="{% static 'libs/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
     <link href="{% static 'libs/pristinejs/dist/pristine.min.css' %}" rel="stylesheet">
 {% endblock %}
 
@@ -52,7 +52,7 @@
 {% block extra_js %}
     {{ block.super }}
     <script src="{% static 'libs/flatpickr/dist/flatpickr.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="{% static 'libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script src="{% static 'libs/pristinejs/dist/pristine.min.js' %}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
