--- a/ERP/billing/templates/billing/_form_base.html
+++ b/ERP/billing/templates/billing/_form_base.html
@@ -3,7 +3,7 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'libs/flatpickr/dist/flatpickr.min.css' %}">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <link href="{% static 'libs/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -29,7 +29,7 @@
 
 {% block extra_js %}
     <script src="{% static 'libs/flatpickr/dist/flatpickr.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="{% static 'libs/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             $('.datepicker').datepicker({ format: 'yyyy-mm-dd', autoclose: true, todayHighlight: true });
