--- a/ERP/forms_designer/templates/forms_designer/voucher_config_list_modal.html
+++ b/ERP/forms_designer/templates/forms_designer/voucher_config_list_modal.html
@@ -58,7 +58,7 @@
 {% endblock %}
 {% block extra_js %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/htmx.org@1.9.2"></script>
+<script src="{% static 'libs/htmx.org/dist/htmx.min.js' %}"></script>
 <script>
 document.body.addEventListener('htmx:configRequest', function(event) {
     function getCookie(name) {
