--- a/ERP/billing/templates/billing/_list_base.html
+++ b/ERP/billing/templates/billing/_list_base.html
@@ -19,12 +19,14 @@
             <div class="card mb-0">
                 <div class="card-body pb-2 pt-3">
                     <div class="d-flex justify-content-between align-items-center mb-2">
-                        <h4 class="card-title mb-0">{{ page_title|default:"List" }}</h4>
-                        {% if can_add and create_url %}
-                        <a href="{{ create_url }}" class="btn btn-success btn-sm">
-                            <i class="mdi mdi-plus me-1"></i> Add New
-                        </a>
-                        {% endif %}
+                        <h4 class="card-title mb-0">{% block page_title %}{{ page_title|default:"List" }}{% endblock %}</h4>
+                        {% block create_button %}
+                            {% if can_add and create_url %}
+                            <a href="{{ create_url }}" class="btn btn-success btn-sm">
+                                <i class="mdi mdi-plus me-1"></i> Add New
+                            </a>
+                            {% endif %}
+                        {% endblock %}
                     </div>
                     <div class="table-responsive">
                         <table id="datatable-buttons" class="table table-bordered table-sm dt-responsive nowrap w-100">
