--- a/ERP/accounting/templates/accounting/journal_entry.html
+++ b/ERP/accounting/templates/accounting/journal_entry.html
@@ -38,6 +38,9 @@
 <div class="main-content">
   <div class="page-content">
     <div class="container-fluid">
+      {# Hidden CSRF token for JavaScript fetch requests #}
+      {% csrf_token %}
+      
       <div class="row">
         <div class="col-12">
           <div class="page-title-box d-flex align-items-center justify-content-between">
